added profile page to view followed bars

--- a/app/views/beer_items/index.html.erb
+++ b/app/views/beer_items/index.html.erb
@@ -7,7 +7,7 @@ You've stumbled on the best thing to happen to the Atlanta beer scene since Bric
 
 <div class="greenLine"></div>
 
-<h2 id="latest_additions">Latest Additions</h2><p id="new_item"><%= link_to "New Item", new_beer_item_path %></p>
+<h2 id="latest_additions">Latest Additions</h2><p id="new_item"><%= link_to "Add a listing", new_beer_item_path %></p>
 <table id="sorted_beer_item_list" class="itemlist">
 <thead>
   <tr>
