--- a/app/views/breweries/index.html.erb
+++ b/app/views/breweries/index.html.erb
@@ -9,7 +9,7 @@
  <thead>
   <tr align="left">
     <th width=250>Name</th>
-	<th width=250>Location</th>
+	  <th width=250>Location</th>
     <th width=50></th>
     <th width=50></th>
   </tr>
@@ -25,8 +25,8 @@
     <td></td>
    <% end %>
    <% if logged_in? && current_user.id == 1 %>
-    <td><%= link_to 'Edit', edit_brewery_path(brewery) %></td>
-    <td><%= link_to 'Destroy', brewery, :confirm => 'Are you sure?', :method => :delete %></td>
+    <td><%= link_to 'Edit', edit_brewery_path(brewery), :class => "action_link" %></td>
+    <td><%= link_to 'Destroy', brewery, :method => :delete, :class => "action_link" %></td>
    <% else %>
    	<td />
    	<td />
