--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -57,8 +57,8 @@ a {
     text-align: center;
     padding-left: 0px;
     padding-right: 0px;
-    margin-left: 5px;
-    margin-right: 5px;
+    margin-left: 2px;
+    margin-right: 2px;
     font-size: 11px; }
 
 .greenLine {
@@ -146,6 +146,9 @@ a {
     padding-top: 5px;
     padding-left: 3px;
     clear: both; }
+  #main form input#undo_button {
+    display: inline;
+    float: left; }
   #main form input[type=text], #main form input[type=password], #main form textarea {
     float: left;
     font-size: 14px;
