fixed js tag typo

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
   <title>Atlanta Beer List</title>
 
   <%= stylesheet_link_tag "application.css", "jquery.jqplot.min.css", "ui-lightness/jquery-ui-1.8.15.custom.css" %>
-  <%= javascript_include_tag "jquery.min.js" %>
+  <%= javascript_include_tag "/javascripts/jquery.min.js" %>
   <%= javascript_include_tag "/javascripts/coffeescripts/script.js" %>
   <%= javascript_include_tag "/javascripts/jquery-ui-1.8.16.custom.min.js" %>
   <%= javascript_include_tag "/javascripts/jquery.jqplot.js" %>
