second attempt at jquery fix

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,12 +4,12 @@
   <title>Atlanta Beer List</title>
 
   <%= stylesheet_link_tag "application.css", "jquery.jqplot.min.css", "ui-lightness/jquery-ui-1.8.15.custom.css" %>
-  <%= javascript_include_tag "/javascripts/jquery.min.js" %>
-  <%= javascript_include_tag "/javascripts/coffeescripts/script.js" %>
-  <%= javascript_include_tag "/javascripts/jquery-ui-1.8.16.custom.min.js" %>
-  <%= javascript_include_tag "/javascripts/jquery.jqplot.js" %>
-  <%= javascript_include_tag "/javascripts/jqplot_plugins/jqplot.dateAxisRenderer.min.js" %>
-  <%= javascript_include_tag "/javascripts/jquery.metadata.js"%>
+  <%= javascript_include_tag "jquery.min.js" %>
+  <%= javascript_include_tag "coffeescripts/script.js" %>
+  <%= javascript_include_tag "jquery-ui-1.8.16.custom.min.js" %>
+  <%= javascript_include_tag "jquery.jqplot.js" %>
+  <%= javascript_include_tag "jqplot_plugins/jqplot.dateAxisRenderer.min.js" %>
+  <%= javascript_include_tag "jquery.metadata.js"%>
   <%= csrf_meta_tag %>
 	<script type="text/javascript">
 
