--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -69,7 +69,7 @@ a {
   /* border-top: 5px solid #556B2F; */
   clear: both;
   /* margin-top: 10px; */
-  padding: 5px 0;
+  padding: 5px 10px;
   text-align: left;
   font-size: 11px; }
 
