--- a/app/views/bars/_follow_form.html.erb
+++ b/app/views/bars/_follow_form.html.erb
@@ -1,5 +1,5 @@
 <div id="follow_form">
-	<% if logged_in? %>
+	<% if user_signed_in? %>
 		<% if bar.is_followed? current_user %>
 			<%= render 'unfollow', :bar => bar %>
 		<% else %>
