--- a/app/views/bars/index.html.erb
+++ b/app/views/bars/index.html.erb
@@ -12,9 +12,9 @@
 
 <div class="greenLine"></div>
 
-<!-- <div id="bar_list"> -->
+<div id="bar_list">
 	<%= render 'list' %>
-<!-- </div> -->
+</div>
 
 <%= link_to 'New Bar', new_bar_path %>
 
