--- a/app/views/breweries/index.html.erb
+++ b/app/views/breweries/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Breweries</h1>
 
-<% if logged_in? %>
+<% if user_signed_in? %>
 	<div align="left"><%= link_to 'New Brewery', new_brewery_path %></div>
 	<br />
 <% end %>
@@ -24,7 +24,7 @@
    <% else %>
     <td></td>
    <% end %>
-   <% if logged_in? && current_user.id == 1 %>
+   <% if user_signed_in? && current_user.id == 1 %>
     <td><%= link_to 'Edit', edit_brewery_path(brewery), :class => "action_link" %></td>
     <td><%= link_to 'Destroy', brewery, :method => :delete, :class => "action_link" %></td>
    <% else %>
