--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,8 @@
   <%= javascript_include_tag "jquery-ui-1.8.16.custom.min.js" %>
   <%= javascript_include_tag "jquery.jqplot.js" %>
   <%= javascript_include_tag "jqplot_plugins/jqplot.dateAxisRenderer.min.js" %>
-  <%= javascript_include_tag "jquery.metadata.js"%>
+  <%= javascript_include_tag "jquery.metadata.js" %>
+	<%= javascript_include_tag :defaults %>
   <%= csrf_meta_tag %>
 	<script type="text/javascript">
 
@@ -39,27 +40,21 @@
 		<li>-</li>
 		<li><%= link_to "Breweries", breweries_path %></li>
 		<li>|</li>
-      <% if logged_in? %>	
+      <% if user_signed_in? %>	
 		   	<% unless current_user.admin_bars.empty? %>      
-				<li><%= link_to "Manage Bars", bar_owner_path %></li>
-				<li>|</li>
-			 <% end %>
-					<li><%= link_to "Profile", profile_path %> (<%= link_to "edit", edit_user_path(current_user) %>) </li>
+					<li><%= link_to "Manage Bars", bar_owner_path %></li>
 					<li>|</li>
-				<% unless current_user.name.nil?%>
-					<li>Welcome, <%= current_user.name %> (<%= link_to "Logout", logout_path, :id=>'logout' %>)</li>
-				<% else %>
-	        <li><%= link_to "Logout", logout_path, :id=>'logout' %></li>
-				<% end %>
+			 <% end %>
+					<li>Welcome, <%= current_user.email %> (<%= link_to "Logout", destroy_user_session_path, :id=>'logout', :method => :delete %>)</li>
       <% else %>
-		 <% if signup_allowed? %>
-			<li><%= link_to "Signup", new_user_path %></li>
-			<li>|</li>
-		   <% else %>
-			<li>Beta Testing Full</li>
-			<li>|</li>
-		 <% end %>
-         <li><%= link_to "Login", login_path %></li>
+		 		<% if signup_allowed? %>
+					<li><%= link_to "Signup", new_user_registration_path %></li>
+					<li>|</li>
+				<% else %>
+					<li>Beta Testing Full</li>
+					<li>|</li>
+				<% end %>
+        <li><%= link_to "Login", new_user_session_path %></li>
       <% end %>
      </ul>
     </div>
