--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -180,6 +180,23 @@ a {
     font-size: 10px; }
   #main h3:hover .actions {
     display: inline; }
+#main #iphone-message {
+  text-align: center;
+  padding: 25px 50px;
+  font-size: 20px; }
+#main #announcement {
+  text-align: center;
+  padding: 25px 50px;
+  font-size: 25px; }
+
+#announcement-image {
+  position: absolute;
+  align: left;
+  left: 100px;
+  down: 20px;
+  z-index: -1;
+  height: 62px;
+  width: 120px; }
 
 .brewerylink {
   font-size: 15px;
@@ -221,11 +238,6 @@ a {
 
 #select {
   margin-left: 10px; }
-
-#message {
-  text-align: center;
-  padding: 25px 50px;
-  font-size: 20px; }
 
 .zebra {
   background-color: #F0F0F0;
