--- a/app/views/bars/_form.html.erb
+++ b/app/views/bars/_form.html.erb
@@ -31,6 +31,11 @@
   </div>
 
   <div class="field">
+     <%= f.label "Url" %><br />
+     <%= f.text_field :url %>
+  </div>
+
+  <div class="field">
     <%= f.label :description %><br />
     <%= f.text_area :description %>
   </div>
