--- a/app/views/bars/index.html.erb
+++ b/app/views/bars/index.html.erb
@@ -1,14 +1,17 @@
 <h1>Bars</h1>
 
+<p>Sort by location:</p>
 <div class="search">
 <%= form_tag bars_path, :method => :get do %>
   <p>
+		<%= label_tag "Zip:"%>
     <%= text_field_tag :search, params[:search] %>
-    <%= submit_tag "Search Near", :name => nil %>
+    <%= submit_tag "Sort", :name => nil %>
   </p>
 <% end %>
 </div>
 
+<p>Hint:  Click on a row to view the beer list for a bar!</p>
 
 <div class="greenLine"></div>
 
