--- a/app/views/breweries/_form.html.erb
+++ b/app/views/breweries/_form.html.erb
@@ -25,6 +25,10 @@
     <%= f.label :zip %><br />
     <%= f.text_field :zip %>
   </div>
+  <div class="field">
+    <%= f.label :url %><br />
+    <%= f.text_field :url %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
