--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -59,9 +59,12 @@
      </ul>
     </div>
  </div>
-  <div id="main">
-  	<% if iphone_user_agent? %>
-  		<div id="message">
+
+<%= image_tag "comingsoon_eav.png", :id => "announcement-image" %>
+
+ <div id="main">
+ 	<% if iphone_user_agent? %>
+ 		<div id="iphone-message">
 			Using an iPhone? <a href="http://iphone.atlbeerlist.com/">Use the optimized version</a>.
 		</div>
 	<% end %>
