fixed gmaps4rails support on bars page

--- a/app/views/breweries/show.html.erb
+++ b/app/views/breweries/show.html.erb
@@ -11,6 +11,9 @@
 
 <%= link_to 'Edit', edit_brewery_path(@brewery) %> |
 <%= link_to 'Back', :back %>
+<br />
+<br />
+<div class="greenLine" />
 
 <div class="itemlist">
 <table>
