--- a/public/stylesheets/sass/application.scss
+++ b/public/stylesheets/sass/application.scss
@@ -58,7 +58,7 @@ a {
 	letter-spacing: 1px;
 	border-bottom: 5px solid #333333;
 	color:#333333;
-	padding: 20px 0;
+	padding: 20px 0px;
 	height: 35px;
 	margin-left:auto;
 	margin-right:auto;
@@ -67,7 +67,8 @@ a {
 	h1 {
 	  padding-left: 15px;
 	  padding-top: 2px;
-	  float: left;
+		margin-bottom: 20px;
+		float: left;
 	  font-size: 36px;
 
   	a {
@@ -86,6 +87,12 @@ a {
 	
 	p {
 	  float: right;
+	}
+	
+	#beta {
+	  padding-left:5px;
+	  vertical-align: -10px;
+	  font-size: 16px;
 	}
 }
 
@@ -129,17 +136,6 @@ a {
   text-align: center;
   font-size: 11px;
 }
-
-
-
-
-#beta {
-  /* margin-left: 310px; */
-  padding-left:5px;
-  vertical-align: -10px;
-  font-size: 16px;
-}
-
 
 #main {
 	h1 {
